chore: use charset constant